Edit corrected letter spacing for h1 Added padding to home page Added new font weight for a lato font

--- a/src/scss/_boilerplate.scss
+++ b/src/scss/_boilerplate.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
 
 *,
 *::before,
@@ -58,5 +58,9 @@ h6 {
 
 h1 {
   line-height: 1.2;
-  letter-spacing: -1%;
+  letter-spacing: -0.4px;
+}
+
+.home {
+  padding-inline: 20px;
 }
